--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "getfivestars/php-sdk",
     "description": "GetFiveStars PHP SDK",
+    "varsion": "1.0.0",
     "autoload": {
         "psr-0" : {
             "GetFiveStars\\Api" : "src"
