--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,20 @@
 {
     "name": "getfivestars/php-sdk",
     "description": "GetFiveStars PHP SDK",
+    "license": "MIT",
+    "keywords": ["GetFiveStars", "PHP", "SDK", "API"],
+    "authors": [
+        {
+            "name": "GetFiveStars.com",
+            "email": "support@getfivestars.com"
+        }
+    ],
     "autoload": {
-        "psr-0" : {
-            "GetFiveStars\\Api" : "src"
+        "psr-0": {
+            "GetFiveStars\\Api": "src"
         }
     },
-     "require": {
+    "require": {
         "php": ">=5.3.0"
     }
-} 
+}
