--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,20 @@
   ],
   "autoload": {
     "psr-4": {
-      "GatherUp\\SDK": "src"
+      "GatherUp\\SDK\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "GatherUp\\Tests\\SDK\\": "tests"
     }
   },
   "require": {
     "php": ">=5.6.0",
     "guzzlehttp/guzzle": "~6.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7",
+    "php": ">=7.0"
   }
 }
