--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,10 @@
     }
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.2",
     "guzzlehttp/guzzle": "^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7",
-    "php": ">=7.0"
+    "phpunit/phpunit": "^8.0"
   }
 }
